    Core, Setup, etc.:
    * new tool 'livedump' for dumping configuration and status
      information from one monitoring core and importing this
      into another.
    * Enable new check registration API (not yet used in checks)
    * FIX: fix handling of prefix-tag rules (+), needed for WATO
    * FIX: handle buggy SNMP devices with non-consecutive OIDS
      (such as BINTEC routers)

    WATO:
    * More checks are configurable via WATO now
    * Distributed WATO: Made all url calls using curl now
    * FIX: fix bug in inventory in validate_datatype()
    * Better output in case of inventory error
    * FIX: fix bug in host_icon rule on non OMD
    * FIX: do not use isdisjoint() (was in rule editor on Lenny)
    * FIX: allow UTF-8 encoded permission translations
    * FIX: Fixed several problems in OMD apache shared mode
    * FIX: Do not use None$ as item when creating new rules
    * FIX: Do load *all* users from htpasswd, so passwords from
      users not created via WATO will not be lost.
    * FIX: honor site disabling in replication module

    Checks & Agents:
    * hpux_if: fix missing default parameter errors
    * hpux_if: make configurable via WATO
    * if.include: fix handling of NIC with index 0
    * hpux_lunstats: new check for disk IO on HP-UX
    * windows - mk_oracle tablespace: Added missing sid column
    * diskstat: make inventory mode configurable via WATO
    * added new checks for Fujitsu ETERNUS DX80 S2 
      (thanks to Philipp Höfflin)
    * Fix Perf-O-Meter of fileage
    * hpux_snmp_cs.cpu: new SNMP check for CPU utilization
      on HP-UX.
    * if/if64: inventory also picks up type 62 (fastEther). This
      is needed on Cisco WLC 21xx series (thanks to Ralf Ertzinger)
    * FIX: fix inventory of f5_bigip_temp
    * mk_oracle (lnx+win): Fixed TEMP tablespace size calculations

    Multisite:
    * Added several missing localization stringsw
    * IE: Fixed problem with clicking SELECT fields in the new wato foldertree snapin